# tree_traversal

./: .gitignore  AGENTS.md  Cargo.toml  README.md  algorithm.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
examples/: bbs_knapsack_problem.rs  bbs_knapsack_problem_oop.rs
src/: bbs.rs  bfs.rs  bms.rs  common.rs  dfs.rs  functional.rs  gds.rs  lib.rs  node.rs  traversal.rs  utils.rs
src/functional/: bbs.rs  bfs.rs  bms.rs  common.rs  dfs.rs  gds.rs
src/traversal/: bb.rs  bbs.rs  bfs.rs  bms.rs  common.rs  dfs.rs  functional.rs  gds.rs  pfs.rs
src/traversal/functional/: bbs.rs  bfs.rs  bms.rs  common.rs  dfs.rs  gds.rs  pfs.rs
src/traversal/functional/functional/: bms.rs  dfs.rs
