[package]
name = "tree_traversal"
description = "Find best leaf node in a tree"
repository = "https://github.com/lucidfrontier45/tree_traversal"
keywords = ["combinatorial", "optimization", "tree", "graph"]
license-file = "LICENSE"
readme = "README.md"
categories = ["algorithms"]
version = "0.4.0"
edition = "2024"
authors = ["Du Shiqiao <lucidfrontier.45@gmail.com>"]

[lib]
name = "tree_traversal"
